# glimpse

./: .env.example  .gitignore  CHROME_USER_DIRECTORY_GUIDE.md  Implementation.md  README.md  WORKFLOW_INTEGRATION.md  WORKFLOW_USE.md  cursor_preview.html  migrate_workflow_names.py  pyproject.toml  setup_auth.py  setup_chromium_profile.py  setup_workflow_integration.py  setup_workflow_use.py  test_multi_instance.py  test_separate_profiles.py  test_workflow_naming.py  websocket_test.html  workflow.py
.cursor/rules/: poetry-usage.mdc
frontend/: next.config.mjs  v0-interface.tsx
frontend/app/: globals.css  page.tsx
frontend/components/: ActionButton.tsx  EditorView.tsx  HomePage.tsx  InputForm.tsx  LoadingIndicator.tsx  LoadingView.tsx  PreviousDemoCard.tsx  PreviousDemosSection.tsx  PublishedView.tsx  Sidepanel.tsx  Slide.tsx  SlideEditor.tsx  SuggestedActions.tsx  VideoEditorView.tsx  WorkflowRecorder.tsx  index.ts  types.ts
frontend/public/: README.md  mouse_pointer_preview.html
glimpse/: run.py  workflow_bridge.py
glimpse/api/: agent.py  app.py  auth_manager.py  chrome_manager.py
glimpse/mocks/: demo_status.json  generate_demo.json
saved_workflows/: recorded_workflow_20250604_163634.workflow.json  recorded_workflow_20250604_163757.workflow.json  recorded_workflow_20250604_170208.workflow.json  recorded_workflow_20250604_170737.workflow.json  temp_recording_xh8b3rww.json
workflow-use-main/workflows/: browser_use  cli.py
workflow_user_data_dir/: ChromeFeatureState  Local State
workflow_user_data_dir/Default/: Cookies  DIPS  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Shortcuts  TransportSecurity  Web Data
workflow_user_data_dir/Default/DawnGraphiteCache/: data_1  index
workflow_user_data_dir/Default/DawnWebGPUCache/: data_1  index
workflow_user_data_dir/Default/Extension Rules/: LOG
workflow_user_data_dir/Default/Extension Scripts/: LOG
workflow_user_data_dir/Default/Extension State/: LOG
workflow_user_data_dir/GrShaderCache/: data_1  index
workflow_user_data_dir/GraphiteDawnCache/: data_0  data_1  data_2  index
workflow_user_data_dir/ShaderCache/: data_1  index
workflow_user_data_dir/segmentation_platform/: ukm_db
(+288 files in other folders)
