[project]
name = "glimpse"
version = "0.1.0"
description = "AI-Assisted Demo Creation via Natural Language and Browser Agent"
authors = [
    {name = "Re Solver"},
    {name = "Ritanshu Dokania"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.109.0,<0.110.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "pydantic (>=2.6.0,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "patchright (>=1.52.3,<2.0.0)",
    "screeninfo (>=0.8.1,<0.9.0)",
    "langchain-openai (>=0.3.17,<0.4.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "posthog (>=4.0.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
